compiler/tests/success/require/file1.jazz
fn add(reg u64 x y) -> reg u64 {
   reg u64 r;
   r = x + y;
   return r;
}